--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link href="/src/style.css" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  integrity="sha512-xh6t8a2h6I6Xk+..."
+  crossOrigin="anonymous"
+  referrerPolicy="no-referrer"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Catalog</title>
   </head>
